fix: too large scrollable div

--- a/order/app/styles/order/pay-detail/pay-detail.scss
+++ b/order/app/styles/order/pay-detail/pay-detail.scss
@@ -120,7 +120,7 @@
       }
     }
     .scrollable {
-      height: calc(100% - 127px);
+      height: calc(100% - 158px);
       max-height: none;
     }
     .menu--desktop {
